chore(deployment): set up maven to create WAR + instructions